# Avaritia

./: .gitignore  .gitmodules  CMakeLists.txt  Prototype.py  README.md  hash.cpp  hash.txt  vcpkg.json
.github/workflows/: mingw64.yml  msvc.yml  standalone.yml
builds/: .ninja_deps  .ninja_log  build.ninja
builds/.cmake/api/v1/reply/: cache-v2-4d17cebeb27f68dbe2ad.json  cmakeFiles-v1-6433481cc794e0adff93.json  codemodel-v2-09458f160dc6bbae4d5d.json  directory-_deps.httplib-build-Release-0d328d78048e60d74440.json  index-2023-07-01T14-59-08-0692.json  target-main-Release-1576160a191bb3008b5c.json  target-maingui-Release-0620570a429e88e8fb29.json  target-spdlog-Release-2b9823f07bfed34806b9.json  toolchains-v1-c4cc24c60f32bf55e4a7.json
include/: Common.hpp  GlobalSetting.hpp  MurmurHash3.hpp  Request.hpp
include/avaritia/: baseapp.h  crypto.h  launcher.h  request.h
include/gui/: BaseApp.hpp
legacy/: .gitmodules
legacy/include/gui/: BaseApp.hpp
legacy/src/: main.cpp
legacy/submodules/ImGui-Addons/FileBrowser/: ImGuiFileBrowser.cpp
source/: MurmurHash3.hpp  baseapp.cpp  crypto.cpp  imgui_spectrum.cpp  request.cpp
source/avaritia/: baseapp.cpp  launcher.cpp  request.cpp
src/: CMakeLists.txt  main.cpp  main.cs
src/gui/: CMakeLists.txt  imgui_config.h  main.cpp  main_gui.cpp
standalone/: CMakeLists.txt
standalone/include/: application.h  imgui_format.h  setting.h
standalone/source/: main.cpp  main.res
test/: CMakeLists.txt
wwwroot/: contentlogin.html  index.html
wwwroot/css/: code-input.css  common.css  dialog.css  error.css  index.css  launcher-init.css  launcher-install.css  launcher-splash.css  rule.css  setting.css  site.css  toaster.css  vendor.css
wwwroot/js/: base.js  base.js.map  client_site.js  client_site.js.map  install.js  install.js.map  login.js  login.js.map  post_message.js  post_message.js.map  request.js  request.js.map  settings.js  settings.js.map
wwwroot/js/fb/: index.js  index.js.map  modal.js
